# KleinEngine

./: CMakeLists.txt  README.md
assets/shaders/: shader.f.glsl  shader.frag
src/: GL_TYPES.hpp  ImageLoader.cpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp  __macros__only_hpp.hpp  main.cpp
